# keel-BE

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
app/: __init__.py  celery_app.py  database.py  main.py  startup.py
backend/: alembic.ini  pyproject.toml
backend/app/: celery_app.py  main.py  startup.py
backend/app/api/: __init__.py  admin_users.py  apikeys.py  auth.py  chat.py  common.py  connectors.py  conversations.py  dashboard.py  documents.py  ingest.py  mcp.py  model.py  search.py  settings.py
backend/app/connectors/: google_drive.py
backend/app/core/: config.py  database.py  deps.py  errors.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/models/: base.py  connector.py  document.py  organization.py  user.py
backend/app/schemas/: admin.py  apikey.py  common.py  connector.py  dashboard.py  document.py  ingest.py  settings.py
backend/app/services/: apikey_service.py  auth_service.py  chat_service.py  chunking.py  connector_service.py  dashboard_service.py  document_service.py  graph_store.py  llm_gateway.py  ner.py  parsing.py  retrieval_service.py  settings_service.py  storage.py  tagging_service.py  usage.py  user_service.py  vector_store.py
backend/app/services/ai/: llm_gateway.py  ner.py  tagging.py
backend/app/services/ingestion/: worker_flow.py
backend/app/services/providers/: __init__.py  base.py  openai.py
backend/app/stores/: graph_store.py  storage.py  vector_store.py
backend/app/tasks/: ingestion.py
backend/ingestion/: __init__.py  tasks.py  worker.py  worker_flow.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: seed_admin.py
backend/tests/: test_app_imports.py  test_chunking.py  test_csv_chunking.py  test_gateway_singleton.py  test_google_drive.py  test_health_and_envelope.py  test_regression_fixes.py  test_retrieval_assembly.py  test_retrieval_params.py  test_section_ref.py  test_storage_multipart.py  test_token_usage_cost.py
backend/tests/integration/: conftest.py  test_billing_proof.py  test_connector_sync.py  test_pipeline.py  test_workspace_isolation.py
docker/: entrypoint.sh
docs/: api-contract.md  architecture.md  data-model.md  ingestion-pipeline.md  runbook.md
migrations/: env.py
scripts/: seed_admin.py
specs/: 000-foundation-and-infra.md  001-auth-and-workspace.md  002-users-and-permissions.md  003-data-and-upload.md  004-ingestion-pipeline.md  005-vector-and-graph.md  006-connectors.md  007-chat-and-retrieval.md  008-rest-retrieval.md  009-rest-ingestion.md  010-api-keys-and-rate-limits.md  011-dashboard.md  012-model-and-settings.md  013-ai-gateway-and-usage.md  (+4 more)
(+53 files in other folders)
