[project]
name = "keel-backend"
version = "0.1.0"
description = "Keel — Enterprise Context & Trust Platform (backend). FastAPI + Celery + Postgres + Qdrant + Neo4j."
requires-python = ">=3.12"
readme = "README.md"

# Core runtime deps. Heavy/optional SDKs (docling) live in extras; the AI/vector/
# graph SDKs are imported lazily so `import app.main` works without services.
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",            # sync driver for Alembic
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "tenacity>=8.3",
    "openai>=1.30",
    "tiktoken>=0.7",
    "qdrant-client>=1.9",
    "neo4j>=5.20",
    "boto3>=1.34",
]

[project.optional-dependencies]
# Docling pulls heavy ML deps; install where parsing actually runs (the worker).
parse = ["docling>=2.0"]
# Google Drive connector. Drive is called over httpx (a core dep); this extra only
# adds refresh-token encryption at rest.
connectors = ["cryptography>=42.0"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-boto3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ingestion*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "ingestion", "tests"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I isort, B bugbear, UP pyupgrade, T20 no-print, ASYNC
select = ["E", "F", "I", "B", "UP", "T20", "ASYNC", "C4"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter helpers are called in argument defaults by design (B008 false positives).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E402"]
"tests/*" = ["B008"]
"scripts/*" = ["T201"]  # CLI seed scripts print to the console by design

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true       # heavy SDKs are optional/lazy
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
